--- a/VR.html
+++ b/VR.html
@@ -12,6 +12,34 @@
     AFRAME.registerComponent('animation-mixer', AFRAME.AFRAME_EXTRAS.animationMixer);
   </script>
 
+  <style>
+    #controls {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 10;
+    }
+
+    button {
+      padding: 10px 20px;
+      margin: 5px;
+      font-size: 16px;
+      border: none;
+      background-color: #007bff;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    button:disabled {
+      background-color: #999;
+      cursor: default;
+    }
+  </style>
 </head>
 
 <body>
@@ -23,6 +51,11 @@
 
   <!-- Escena de A-Frame -->
   <a-scene>
+    <a-assets>
+      <!-- Audio cargado como recurso -->
+      <audio id="audioClip" src="models/SaludDental.mp3"></audio>
+    </a-assets>
+
     <a-camera position="0 1.6 0"></a-camera>
     <a-light type="directional" position="0 1.6 1" intensity="1"></a-light>
 
@@ -32,9 +65,48 @@
       scale="1 1 1">
     </a-entity>
 
+    <!-- Entidad para reproducir el audio -->
+    <a-entity id="audioEntity" sound="src: #audioClip; autoplay: false; loop: true"></a-entity>
+
     <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#ccc"></a-plane>
     <a-sky color="#ECECEC"></a-sky>
   </a-scene>
 
+  <!-- Script para botones -->
+  <script>
+    const modelo = document.querySelector('#modeloAnimado');
+    const playBtn = document.querySelector('#btnPlay');
+    const pauseBtn = document.querySelector('#btnPause');
+    const audioEntity = document.querySelector('#audioEntity');
+
+    let mixerInitialized = false;
+
+    playBtn.addEventListener('click', () => {
+      if (!mixerInitialized) {
+        modelo.setAttribute('animation-mixer', 'clip: *; loop: repeat');
+        mixerInitialized = true;
+      } else {
+        modelo.components['animation-mixer'].play();
+      }
+
+      // Reproducir el audio
+      audioEntity.components.sound.playSound();
+
+      playBtn.disabled = true;
+      pauseBtn.disabled = false;
+    });
+
+    pauseBtn.addEventListener('click', () => {
+      if (modelo.components['animation-mixer']) {
+        modelo.components['animation-mixer'].pause();
+      }
+
+      // Pausar el audio
+      audioEntity.components.sound.pauseSound();
+
+      playBtn.disabled = false;
+      pauseBtn.disabled = true;
+    });
+  </script>
 </body>
 </html>
