--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
   <div class="contenedor">
     <img src="models/Brush-it.png">
-    <h1>¿Qué dispositivo estás usando?</h1>
-    <button onclick="redirigir('movil')">Dispositivo Móvil</button>
-    <button onclick="redirigir('pc')">Ordenador</button>
+    <h1>¿Cuentas con un marcador especial?</h1>
+    <button onclick="redirigir('movil')">Si</button>
+    <button onclick="redirigir('pc')">No</button>
   </div>
 
   <script>
